mockers_derive/tests/compile-fail/lifetime_trait_parameter.stderr
error: Lifetime parameters are not supported yet

 --> $DIR/lifetime_trait_parameter.rs:4:9
  |
4 | trait A<'a> {}
  |         ^^
